--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,75 @@
-theme: jekyll-theme-minimal
-title: Brad's homepage
-description: Bookmark this to keep an eye on my project updates!
+remote_theme: mmistakes/minimal-mistakes
+title: "Your Full Name"
+description: "Academic Homepage | CV | Research"
+url: "https://yourusername.github.io" # change to your GitHub Pages URL
+baseurl: "" # leave this blank for user.github.io, or set to "/repo" if using a project page
+
+# Author settings
+author:
+  name: "Your Name"
+  avatar: "/assets/images/avatar.jpg" # optional photo
+  bio: "PhD Candidate / Researcher in [Field] at [University]"
+  location: "City, Country"
+  email: "your.email@example.com"
+  links:
+    - label: "CV"
+      icon: "fas fa-file-alt"
+      url: "/assets/CV.pdf"
+    - label: "Google Scholar"
+      icon: "ai ai-google-scholar"
+      url: "https://scholar.google.com/citations?user=XXXXXX"
+    - label: "ORCID"
+      icon: "ai ai-orcid"
+      url: "https://orcid.org/0000-0000-0000-0000"
+    - label: "GitHub"
+      icon: "fab fa-github"
+      url: "https://github.com/yourusername"
+    - label: "Twitter"
+      icon: "fab fa-twitter"
+      url: "https://twitter.com/yourhandle"
+
+# Theme settings
+theme: minimal-mistakes-jekyll
+
+# Plugins (required by Minimal Mistakes)
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-include-cache
+
+# Layout and Navigation
+paginate: 5
+paginate_path: /page:num/
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: single
+      author_profile: true
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: single
+      author_profile: true
+
+# Navigation links
+nav:
+  - title: "Home"
+    url: "/"
+  - title: "CV"
+    url: "/assets/CV.pdf"
+  - title: "Research"
+    url: "/research/"
+  - title: "Publications"
+    url: "/publications/"
+  - title: "Contact"
+    url: "/contact/"
+
+# Optional features
+markdown: kramdown
+kramdown:
+  input: GFM
