--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 remote_theme: mmistakes/minimal-mistakes
 title: "Bradley S. Harris"
 description: "Academic Homepage | CV | Research"
-url: "https://bradsharris.github.io" # change to your GitHub Pages URL
-baseurl: "" # leave this blank for user.github.io, or set to "/repo" if using a project page
+url: "https://bradsharris.github.io" 
 
 # Author settings
 author:
