--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://bradsharris.github.io"
 
 # Author settings
 author:
-  name: "Your Name"
+  name: "Bradley Harris"
   avatar: "/assets/images/avatar.jpg" # optional photo
   bio: "Postdoctoral Research Associate"
   location: "Richland WA, USA"
